--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
         {
             "src": "/generate-code",
             "dest": "app.py"
+        },
+        {
+            "src": "/static",
+            "dest": "app.py"
         }
     ]
 }
